Update .env.example with new API credentials

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Spotify API Credentials
-SPOTIFY_CLIENT_ID=your_spotify_client_id_here
-SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
+SPOTIFY_CLIENT_ID=b54c6d36472c4852a64f4e313fb565e5
+SPOTIFY_CLIENT_SECRET=e5dcc040539941fa89b7043b1f576942
 
 # Server Configuration
 PORT=3000
-REDIRECT_URI=http://localhost:3000/callback
+REDIRECT_URI=https://spotify-analyser-app.vercel.app/callback
 
 # For production deployment on Render, update REDIRECT_URI to:
 # REDIRECT_URI=https://your-app-name.onrender.com/callback
