Update .env.example with new credentials and URI
Updated Spotify API credentials and redirect URI.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Spotify API Credentials
-SPOTIFY_CLIENT_ID=your_client_id_here
-SPOTIFY_CLIENT_SECRET=your_client_secret_here
+SPOTIFY_CLIENT_ID=b54c6d36472c4852a64f4e313fb565e5
+SPOTIFY_CLIENT_SECRET=e5dcc040539941fa89b7043b1f576942
 
 # Server Configuration
 PORT=3000
@@ -9,4 +9,4 @@ PORT=3000
 # For local development:
 # REDIRECT_URI=http://localhost:3000/callback
 # For Vercel deployment:
-REDIRECT_URI=https://your-app-name.vercel.app/callback
+REDIRECT_URI=https://spotify-analyser-app.vercel.app/callback
